--- a/css/_vars.sass
+++ b/css/_vars.sass
@@ -24,6 +24,7 @@ $gray4:                   #bebebe
 $gray5:                   #dedede
 $gray6:                   #d9d9d9
 $gray7:                   #cbcbcb
+$gray8:                   #717171
 $red:                     #DE4747
 $text:                    #5C6E93
 $border:                  #DCEAFF
