--- a/css/common.sass
+++ b/css/common.sass
@@ -134,6 +134,10 @@ button
             .form-second
               display: grid
               grid-gap: 15px
+              .input-number-container
+                display: flex
+                input:first-child
+                  width: 74px
               p.label
                 +p-m
                 font-size: 15px
