--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -774,6 +774,9 @@
                   grid-gap: 7px !important
                 .block-second
                   margin-top: 5px !important
+                  .input-number-container
+                    input:first-child
+                      width: 61px !important
                 input
                   height: 40px !important
                   font-size: 14px !important
