--- a/css/common.css
+++ b/css/common.css
@@ -2416,6 +2416,9 @@ footer .footer_main_container .footer_author {
   .modal.addModal.newPatient .modal-dialog .modal-content form .form-first .block-second {
     margin-top: 5px !important;
   }
+  .modal.addModal.newPatient .modal-dialog .modal-content form .form-first .block-second .input-number-container input:first-child {
+    width: 61px !important;
+  }
   .modal.addModal.newPatient .modal-dialog .modal-content form .form-first input {
     height: 40px !important;
     font-size: 14px !important;
@@ -4198,6 +4201,16 @@ button {
   margin-top: 15px;
 }
 
+.modal.addModal.newPatient .modal-dialog .modal-content form .form-first .block-second .input-number-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal.addModal.newPatient .modal-dialog .modal-content form .form-first .block-second .input-number-container input:first-child {
+  width: 74px;
+}
+
 .modal.addModal.newPatient .modal-dialog .modal-content form .form-first .block-second p {
   display: none;
   font-family: "p-m", Arial, sans-serif;
@@ -4228,16 +4241,6 @@ button {
   display: -ms-grid;
   display: grid;
   grid-gap: 15px;
-}
-
-.modal.addModal.newPatient .modal-dialog .modal-content form .form-second .input-number-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.modal.addModal.newPatient .modal-dialog .modal-content form .form-second .input-number-container input:first-child {
-  width: 74px;
 }
 
 .modal.addModal.newPatient .modal-dialog .modal-content form .form-second p.label {
