--- a/css/_inner_content.sass
+++ b/css/_inner_content.sass
@@ -11,7 +11,7 @@
       font-size: 20px
       line-height: 25px
       +p-m
-      color: $blue1
+      color: $black2
       p
         +p-m
         font-weight: bold
