--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -442,8 +442,9 @@
         font-size: 14px
         line-height: 20px
       .send-message
-        font-size: 17px
-        line-height: 24px
+        min-height: 34px
+        font-size: 16px
+        line-height: 22px
         svg
           margin-top: -2px
       
