--- a/css/common.sass
+++ b/css/common.sass
@@ -1363,13 +1363,14 @@ form
     
   .send-message
     background: $white
+    min-height: 40px
     display: flex
-    grid-gap: 5px
+    grid-gap: 10px
     align-items: center
     padding: 0 13px
     +p-m
-    font-size: 20px
-    line-height: 30px
+    font-size: 18px
+    line-height: 27px
     border: 2px solid $blue2
     border-radius: 10px
     transition: all .3s
