--- a/css/_header.sass
+++ b/css/_header.sass
@@ -7,10 +7,11 @@ header
   box-shadow: 0px 2px 10px rgba(47, 119, 255, 0.15)
   border-radius: 0px 0px 25px 25px
   z-index: 1
+
   .header_main_container
     padding: 34.4px 4.25px
     +flex_1
-    grid-gap: 19.5px
+    grid-gap: 9px
 
     .header_left
       a
@@ -46,7 +47,7 @@ header
     .header_right
       margin-left: auto
       +flex_2
-      grid-gap: 19.5px
+      grid-gap: 9px
       .profile_name
         +l-m
         font-size: 20px
@@ -233,12 +234,69 @@ header
                   fill: $blue2
                   stroke: $blue2
 
+  .language-container
+    position: relative
+    .selected-box
+      background: $white
+      +flex_1
+      grid-gap: 7px
+      padding: 4.25px 5.75px
+      box-shadow: 0px 2px 12px rgba(118, 166, 255, 0.15)
+      border-radius: 4px
+      cursor: pointer
+      .selected-lang
+        +p-m
+        font-size: 16px
+        line-height: 22px
+        color: $blue2
+        text-transform: uppercase
+      
+      .lang-arrow
+        transition: transform .3s
+        
+    .other-langs
+      background: $white
+      position: absolute
+      left: 0
+      top: calc( 100% + 5px )
+      width: 100%
+      +flex_5
+      grid-gap: 4px
+      padding: 8px 6px
+      box-shadow: 0px 2px 12px rgba(118, 166, 255, 0.15)
+      border-radius: 5px
+      opacity: 0
+      visibility: hidden
+      transition: all .3s
+      a
+        width: 100%
+        height: 26px
+        +flex_2
+        +p-m
+        font-size: 16px
+        line-height: 22px
+        color: $blue2
+        transition: background .3s
+        border-radius: 5px
+        text-transform: uppercase
+
+        &:hover
+          background: $border
+
+    &.open
+      .selected-box
+        .lang-arrow
+          transform: rotate(180deg)
+      .other-langs
+        opacity: 1
+        visibility: visible
+
   .hamburger
     width: 20px
     height: 20px
     background-image: url('../img/hamburger.svg')
     background-size: contain
-    background-position: 0 1px
+    background-position: center
     background-repeat: no-repeat
     z-index: 22
     display: none
@@ -275,6 +333,9 @@ header
         color: $blue2
         &:hover
           border-bottom: 1px solid $blue2
+    
+    .language-container
+      display: none
 
 .dropdown-menu
   min-width: 100%
@@ -284,7 +345,6 @@ header
     a
       width: 100%
       padding: 5px 10px
-      white-space: nowrap
       +p-r
       font-size: 14px
       line-height: 18px
